Fixing header fixed nav on mobile

--- a/css/filter-bar.scss
+++ b/css/filter-bar.scss
@@ -138,5 +138,8 @@
         div{
             display:none !important;;
         }
+        a{
+            color:$white;
+        }
     }
 }
